--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ __pycache__/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# local database #
+######################
+agentorg/data/
+
+# local env #
+######################
+.bashrc
