--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 LANGCHAIN_PROJECT=AgentOrg
-LANGCHAIN_TRACING_V2=true
-LANGCHAIN_API_KEY=<your-api-key>
-OPENAI_API_KEY=<your-openai-api-key>
+LANGCHAIN_TRACING_V2=false
+LANGCHAIN_API_KEY=<your-langchain-api-key>
+OPENAI_API_KEY=<your-open-api-key>
