--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ LANGCHAIN_PROJECT=AgentOrg
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_API_KEY=<your-langchain-api-key>
 OPENAI_API_KEY=<your-open-api-key>
+TAVILY_API_KEY=<your-tavily-api-key>
