--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
 LANGCHAIN_PROJECT=AgentOrg
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_API_KEY=<your-langchain-api-key>
-OPENAI_API_KEY=<your-open-api-key>
+OPENAI_API_KEY=<your-openai-api-key>
 TAVILY_API_KEY=<your-tavily-api-key>
+
+MYSQL_USERNAME=<your-mysql-db-username>
+MYSQL_PASSWORD=<your-mysql-db-password>
+MYSQL_HOSTNAME=<your-mysql-db-hostname>
+MYSQL_PORT=<your-mysql-db-port>
+MYSQL_DB_NAME=<your-mysql-db-name>
+MYSQL_CONNECTION_TIMEOUT=<your-mysql-db-timeout>
+
+MILVUS_URI=<your-milvus-db-uri>
