--- a/.github/workflows/test-resources.yml
+++ b/.github/workflows/test-resources.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install '.[milvus,shopify,hubspot]'
+          pip install '.[milvus,shopify,hubspot]' --quiet
 
       - name: Test with pytest
         run: |
