--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ GEMINI_API_KEY = <your-gemini-api-key>
 GOOGLE_API_KEY = <your-gemini-api-key>
 ANTHROPIC_API_KEY = <your-anthropic-api-key>
 HUGGINGFACE_API_KEY = <your-huggingface-api-key>
+MISTRAL_API_KEY = <your-mistral-api-key>
 
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_PROJECT=AgentOrg
