--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,8 @@ milvus = [
 shopify = ["ShopifyAPI>=12.7.0,<13.0.0"]
 hubspot = ["hubspot-api-client>=11.1.0,<12.0.0"]
 
-[tool.setuptools.dynamic.version]
-attr = 'arklex.__version__'
+[tool.hatch.version]
+path = "arklex/__init__.py"
 
 [project.urls]
 Homepage = "https://github.com/arklexai/Agent-First-Organization"
