--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,8 @@ dependencies = [
   "scipy>=1.14.1,<2.0.0",
   "litellm>=1.59.0,<2.0.0",
   "janus>=1.0.0,<2.0.0",
-  "pydantic_ai>=0.0.46,<1.0.0"
+  "pydantic_ai>=0.0.46,<1.0.0",
+  "markdown>=3.8",
 ]
 license = "MIT"
 
